modal fixing and scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,3 +59,22 @@ body {
 .modal-open {
    overflow: hidden;
 }
+::-webkit-scrollbar {
+   width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+   background: #18181b;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+   background: #64748b;
+   border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+   background: #16a34a;
+}
